--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -71,8 +71,7 @@ button[aria-expanded="true"].btn-category img {
 		height: 50%;
 		text-indent: -9999px;
 		font-size: 0;
-		background: url("../../dist/images/common/ico_arr_top.svg") no-repeat
-			center center;
+		background: url("../../dist/images/common/ico_arr_top.svg") no-repeat center center;
 		background-size: contain;
 	}
 
@@ -102,7 +101,7 @@ button[aria-expanded="true"].btn-category img {
 	}
 }
 
-.navbar-nav .show > .nav-link,
+.navbar-nav .show>.nav-link,
 .navbar-nav .nav-link.active {
 	color: #2d2d2d;
 }
@@ -146,7 +145,7 @@ button[aria-expanded="true"].btn-category img {
 }
 
 .carousel {
-	&-caption > h2 {
+	&-caption>h2 {
 		font-size: 2.2rem;
 	}
 
@@ -158,7 +157,7 @@ button[aria-expanded="true"].btn-category img {
 		bottom: auto;
 		transform: translateY(-35%);
 
-		& > span {
+		&>span {
 			display: inline-block;
 			width: 4rem;
 			margin-bottom: 0.5em;
@@ -211,11 +210,11 @@ button[aria-expanded="true"].btn-category img {
 }
 
 .changeViewBtn {
-	& + span {
+	&+span {
 		opacity: 1;
 	}
 
-	&.active + span {
+	&.active+span {
 		opacity: 0;
 	}
 }
@@ -251,7 +250,7 @@ button[aria-expanded="true"].btn-category img {
 		max-width: 12rem;
 	}
 
-	.swiper-horizontal > .swiper-pagination-bullets,
+	.swiper-horizontal>.swiper-pagination-bullets,
 	.swiper-pagination-bullets.swiper-pagination-horizontal,
 	.swiper-pagination-custom,
 	.swiper-pagination-fraction {
@@ -275,8 +274,7 @@ button[aria-expanded="true"].btn-category img {
 	.add-word {
 		display: block;
 		padding-left: 1.4rem;
-		background: url("../../dist/images/common/ico_plus.svg") no-repeat left
-			center;
+		background: url("../../dist/images/common/ico_plus.svg") no-repeat left center;
 	}
 
 	.vocabulary.active {
@@ -313,8 +311,7 @@ button[aria-expanded="true"].btn-category img {
 		}
 
 		.add-word {
-			background: url("../../dist/images/common/ico_minus.svg") no-repeat
-				left center;
+			background: url("../../dist/images/common/ico_minus.svg") no-repeat left center;
 		}
 	}
 }
@@ -360,6 +357,7 @@ button[aria-expanded="true"].btn-category img {
 			width: 100%;
 			transition: transform 0.3s;
 		}
+
 		img:hover {
 			transform: scale(1.1);
 		}
@@ -376,7 +374,7 @@ button[aria-expanded="true"].btn-category img {
 		display: none;
 	}
 
-	.swiper-horizontal > .swiper-pagination-bullets,
+	.swiper-horizontal>.swiper-pagination-bullets,
 	.swiper-pagination-bullets.swiper-pagination-horizontal,
 	.swiper-pagination-custom,
 	.swiper-pagination-fraction {
@@ -390,11 +388,13 @@ button[aria-expanded="true"].btn-category img {
 	dt {
 		font-size: 1.6rem;
 	}
-	dt + dd {
+
+	dt+dd {
 		overflow: hidden;
 		text-overflow: ellipsis;
 		display: -webkit-box;
-		-webkit-line-clamp: 3; /* 라인수 */
+		-webkit-line-clamp: 3;
+		/* 라인수 */
 		-webkit-box-orient: vertical;
 		word-wrap: break-word;
 	}
@@ -434,35 +434,109 @@ button[aria-expanded="true"].btn-category img {
 	}
 }
 
+// Layer Popup
 .offcanvas.offcanvas-middle {
 	width: 90%;
-	height: auto;
-	top: -50%;
-	right: 0;
+	min-height: 90vh;
 	left: 50%;
-	max-height: 100%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -200%);
 	border-radius: 15px;
 	overflow: hidden;
 
 	.offcanvas-header {
-		height: 50vh;
-		background: url("../../dist/images/photo/sample_popup.jpg") no-repeat
-			left top;
+		position: relative;
+		height: 40vh;
+		overflow: hidden;
+		min-height: 27rem;
+		background: url("../../dist/images/photo/sample_popup.jpg") no-repeat center center;
+		background-size: cover;
+		justify-content: center;
+
+		.inner {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			z-index: 2;
+		}
+
+		h2 {
+			color: $white;
+			font-size: 3.6rem;
+		}
 
 		.btn-close {
-			width: 2rem;
-			height: 2rem;
-			font-size: 2rem;
+			position: absolute;
+			right: 1.6rem;
+			top: 1.6rem;
+			z-index: 10;
+			width: 2.4rem;
+			height: 2.4rem;
+			font-size: 2.4rem;
 			margin: 0;
 			padding: 0;
+			background: url("../../dist/images/common/btn_w_close.svg") no-repeat left top;
+		}
+
+		.blackLayer {
+			position: absolute;
+			top: -1px;
+			left: 0;
+			z-index: 1;
+			width: 100%;
+			height: 100%;
+			/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000000+0,000000+70&0.65+0,0+100 */
+			background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.2) 70%, rgba(0, 0, 0, 0) 100%);
+			/* FF3.6-15 */
+			background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.2) 70%, rgba(0, 0, 0, 0) 100%);
+			/* Chrome10-25,Safari5.1-6 */
+			background: linear-gradient(to bottom, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.2) 70%, rgba(0, 0, 0, 0) 100%);
+			/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000', endColorstr='#00000000', GradientType=0);
+			/* IE6-9 */
+
 		}
 	}
 
 	.offcanvas-body {
+		height: 50vh;
+		min-height: 27rem;
 		overflow-y: hidden;
+
+		.info-list {
+			width: 80%;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			z-index: 11;
+			transform: translate(-50%, -50%);
+		}
+
+		.info-list ul {
+			display: flex;
+			justify-content: center;
+		}
+
+		.price-wrap {
+			margin-top: 10rem;
+			text-align: center;
+		}
+
+		.price-wrap strong {
+			font-size: 3.2rem;
+			font-weight: bold;
+			letter-spacing: -1px;
+		}
+
+		.price-wrap p {
+			font-size: 1.6rem;
+		}
+
+		.btn-add {
+			text-align: center;
+		}
 	}
 }
+
 .offcanvas.showing,
 .offcanvas.show:not(.hiding) {
 	top: 50%;
@@ -533,7 +607,7 @@ button[aria-expanded="true"].btn-category img {
 		height: 6.4rem;
 	}
 
-	.navbar-nav .show > .nav-link,
+	.navbar-nav .show>.nav-link,
 	.navbar-nav .nav-link.active {
 		color: $blue;
 	}
@@ -570,7 +644,7 @@ button[aria-expanded="true"].btn-category img {
 	}
 
 	.carousel {
-		&-caption > h2 {
+		&-caption>h2 {
 			font-size: 4.8rem;
 		}
 	}
@@ -664,7 +738,7 @@ button[aria-expanded="true"].btn-category img {
 			padding: 3rem 0 1rem 0;
 		}
 
-		ul > li {
+		ul>li {
 			padding: 0.2rem 0;
 			margin-right: 3rem;
 			padding-right: 3rem;
@@ -702,7 +776,7 @@ button[aria-expanded="true"].btn-category img {
 				display: none;
 			}
 
-			a.subtit + .depth {
+			a.subtit+.depth {
 				visibility: hidden;
 				height: auto;
 				overflow: hidden;
@@ -715,7 +789,7 @@ button[aria-expanded="true"].btn-category img {
 				display: inline-flex;
 			}
 
-			a.subtit.active + .depth {
+			a.subtit.active+.depth {
 				opacity: 1;
 				visibility: visible;
 			}
@@ -859,7 +933,7 @@ button[aria-expanded="true"].btn-category img {
 			letter-spacing: -1px;
 		}
 
-		dt + dd {
+		dt+dd {
 			font-weight: bold;
 		}
 
